--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
   <title>Calendario</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="../css/login.css">
+  <link rel="stylesheet" type="text/css" href="css/login.css">
 </head>
 <body>
   <section id="container-form">
