--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
                 <div class="input_wrap">
                     <input id="email" type="text" name="email" placeholder="email">
                 </div>
+                <span id="email_error" class="error hidden">El email no puede estar vacio</span>
                 <div class="input_wrap">
                     <input id="password" type="password" name="password" placeholder="password">
                 </div>
+                <span id="password_error" class="error hidden">El password no puede estar vacio</span>
                 <button id="login_button">Login</button>
                 <div id="signup_option">or <a href="signup.html">sign up!</a></div>
             </div>
