--- a/signup.html
+++ b/signup.html
@@ -12,12 +12,15 @@
       <div class="input_wrap">
         <input id="email" type="text" name="email" placeholder="email">
       </div>
+        <span id="email_error" class="error hidden">El email no puede estar vacio</span>
       <div class="input_wrap">
         <input id="password" type="password" name="password" placeholder="password">
       </div>
+        <span id="password_error" class="error hidden">El password no puede estar vacio</span>
       <div class="input_wrap">
         <input id="name" type="text" name="name" placeholder="name">
       </div>
+        <span id="name_error" class="error hidden">El nombre no puede estar vacio</span>
       <button id="signup_button">Sign up</button>
       <div id="signup_option">or <a href="index.html">login!</a></div>
     </div>
