Again with validations

--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
       <div class="input_wrap">
         <input id="email" type="text" name="email" placeholder="email">
       </div>
-        <span id="email_error" class="error hidden">El email es incorrecto</span>
+        <span id="email_error" class="error hidden">El email no puede estar vacio</span>
       <div class="input_wrap">
         <input id="password" type="password" name="password" placeholder="password">
       </div>
